Bug 143547 - LO Writer: navigator should stand still on promoting and demoting
Summary: LO Writer: navigator should stand still on promoting and demoting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.4.2 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2021-07-26 13:33 UTC by Christian Lehmann
Modified: 2022-10-03 08:07 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
large odt document (1.33 MB, application/vnd.oasis.opendocument.text)
2021-07-27 13:00 UTC, Christian Lehmann
Details
navigator bar is rewritten so that promoted heading is at top margin (3.53 MB, video/x-matroska)
2021-09-21 10:24 UTC, Christian Lehmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Lehmann 2021-07-26 13:33:43 UTC
Description:
In the navigator, outline of chapter heading is repositioned after each click on a promotion/demotion arrow.

Steps to Reproduce:
1. Have a document open with an extensive chapter subdivision taking more than the screen height to display in the navigator(F5).
2. Double-click a chapter further down in the navigator bar.
3. In the symbol menu on top of the bar, click on any of the promote/demote arrows.

Actual Results:
The entire chapter outline in the bar is repositioned so the promoted/demoted chapter gets on its top of the outline display space.

Expected Results:
Leave the position of the outline intact, rewrite only the particular headline(s) affected by the promote/demote operation.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
This is especially disturbing for 'promote chapter' operations, since after the first upwards step, the user can no longer see the target of the promotion planned.

This bug appears to be new in version 7.

For its verification, large_test_file.odt (application/vnd.oasis.opendocument.text), 1.07 MB, created by Christian Lehmann on 2020-09-03 
may be used.
Comment 1 raal 2021-07-26 18:43:14 UTC
Please, can you attach test file? Thanks
Comment 2 Christian Lehmann 2021-07-27 13:00:10 UTC
Created attachment 173879 [details]
large odt document

I am more or less happy to comply. However, Writer does not allow me to anonymize the comments by 'find and replace', so I had to delete them.

I wonder why you cannot use the test file I had indicated, which is publicly available.
Comment 3 Jean-Baptiste Faure 2021-08-09 21:46:51 UTC
(In reply to Christian Lehmann from comment #2)
> [...]
> I wonder why you cannot use the test file I had indicated, which is publicly
> available.

Because only you know where this file is.

Best regards. JBF
Comment 4 Jean-Baptiste Faure 2021-08-10 20:32:54 UTC
I do not reproduce with Version: 7.1.6.0.0+ / LibreOffice Community
Build ID: 825060c2f3cffc6e1275e952421be33a09a777cf
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Ubuntu_20.04_x86-64
Calc: threaded

Please, could you copy&paste version info of your LibreOffice? In Help > About LibreOffice, click on the button close to "Version information" and paste the result here.

Status has been set to NEEDINFO, please set it back to UNCONFIRMED once requested information has been provided.

Best regards. JBF
Comment 5 Christian Lehmann 2021-08-11 07:07:15 UTC
I have to ask you to wait for three weeks. Currently I only have v. 7.0.4.2 on Windows 10 available, which does not show the problem. Possibly the problem is limited to that version 7.1.4.2 (on Linux).
Comment 6 QA Administrators 2021-08-12 03:58:23 UTC Comment hidden (obsolete)
Comment 7 Christian Lehmann 2021-09-13 15:54:20 UTC
I can now confirm that the bug is certainly alive under

Version: 7.1.5.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 12; OS: Linux 5.3; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 8 QA Administrators 2021-09-21 04:54:03 UTC Comment hidden (obsolete)
Comment 9 Christian Lehmann 2021-09-21 10:24:46 UTC
Created attachment 175163 [details]
navigator bar is rewritten so that promoted heading is at top margin

Here is a screen video showing what I meant. If you cannot work with the format, I can try to convert it.
Comment 10 QA Administrators 2021-09-22 03:40:10 UTC Comment hidden (obsolete)
Comment 11 Dieter 2022-08-30 13:46:20 UTC
I confirm it with

Version: 7.4.0.3 (x64) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Jim, can you have a look at it?
Comment 12 Commit Notification 2022-09-14 21:22:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a33b8ec923b4e86a2ca2075f9541e79a729b2ed7

tdf#143547 SwNavigator: restore content tree scroll position

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Dieter 2022-10-02 08:46:28 UTC
VERIFIED with

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c3b5eea4304ad6815b491f549fce008a9630c213
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Jim, thanks for fixing it. Is it possible to backport it to LO 7.4?
Comment 14 Commit Notification 2022-10-03 08:07:39 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9c101e46269db89e20989553c5f1824864a6f678

tdf#143547 SwNavigator: restore content tree scroll position

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.