tdf#143547 SwNavigator: restore content tree scroll position

after promote, demote, and move chapter

Change-Id: Ie165fadf6154a019ad79a0fed489f63aa768c8f9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139823
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>